package logiciel.Observateur;

public interface Observer {
    public void update(Subject s);
}
