package logiciel.commande;

public class CommandTranslate implements Commande{
    @Override
    public void execute() {

    }
}
