package logiciel.commande;

import logiciel.commande.Commande;

public class CommandUndo implements Commande {
    @Override
    public void execute() {

    }
}
