package logiciel.commande;

public class CommandZoomIn implements Commande{
    @Override
    public void execute() {

    }
}
