package logiciel.commande;

public class CommandZoomOut implements Commande {
    @Override
    public void execute() {

    }
}
