package logiciel.commande;

public interface Commande {
    void execute();
}
